# poc-ai-agent

./: .env.example  README.md  pyproject.toml
ai_agent/: agent.py  client.py  config.py  main.py  server.py
